Java: complete RutaFlow purge (0-15)
Stripped 53 'Construcción RutaFlow' subsections, removed the orphaned
'Proyecto transversal RutaFlow' section in modulo-13, renamed generic
mermaid/diagram labels (modulo-8, modulo-10), and de-coupled modulo-15
(the capstone hardening chapter) from RutaFlow entirely: renamed the
com.rutaflow.* package to com.academia.*, the rutaflow-* Gradle module
prefix to plain module names already used elsewhere in that same file
(domain/application/infrastructure/api), and reworded every remaining
'RutaFlow'-branded prose sentence to refer to the module's own
multi-module project generically.